# libejovopp

./: .readthedocs.yaml  CMakeLists.txt  README.md  mainpage.dox  mkdocs.yml
.github/workflows/: Mac.yml  Ubuntu.yml
docs/: index.md  tutorial.md
docs/how_to/: markov_chains.md
include/: ejovo.hpp  libejovo.hpp  types.hpp  types_def.hpp
include/benchmarks/: rng.hpp
include/declarations/: AbsView.hpp  Clock.hpp  ColView.hpp  Grid1D.hpp  KdTree.hpp  MatView.hpp  Matrix.hpp  RowView.hpp  TransView.hpp  VecView.hpp
include/definitions/: AbsView.hpp  ColView.hpp  Grid1D.hpp  MatView.hpp  Matrix.hpp  RowView.hpp  VecView.hpp  Vector.hpp
include/ejovo/: core.hpp  factory.hpp  operations.hpp  plot.hpp  quadrature.hpp
include/ejovo/rng/: Xoshiro.hpp  mcmc.hpp  openmp.hpp  rng.hpp
src/: CMakeLists.txt  lib.cpp
src/benchmarks/: rng.cpp
test/: CMakeLists.txt  benchmarks.cpp  benchmarks_omp.cpp  core_test.cpp  ejovotest.hpp  hello_test.cpp  t_AbsView.cpp  t_Grid.cpp  t_Kd.cpp  t_MCMC.cpp  t_Matrix.cpp  t_hello.cpp
